--- a/analysis/fish_position.ipynb
+++ b/analysis/fish_position.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "id": "59e36d94-06f1-4e18-9083-44553de60a82",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ad6cf600-e4d4-455a-a255-317c6b57c984",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 3,
    "id": "4fe6d03b-36f4-40ca-942a-0988db68be6b",
    "metadata": {},
    "outputs": [],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dc7c4bee-df90-47ed-bcaa-885f52ee511a",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,8 @@
     "    # Get the first image as the ROI selection after you're sure you've\n",
     "    # gotten the frame successfully read\n",
     "    video.set(cv2.CAP_PROP_POS_FRAMES, 0)\n",
-    "    \n",
+    "\n",
+    "    print(\"READING FRAME\")\n",
     "    # cap.read() tells you if the frame retrieval was successful (boolean)\n",
     "    # through ret, frame is the numpy array array that opencv returns\n",
     "    ret, frame = video.read()\n",
@@ -366,7 +367,6 @@
     "                         \"h\": roi[3]\n",
     "                        }\n",
     "                   }\n",
-    "\n",
     "        metadata_path = [data_directory / directory / \"metadata.json\" for directory in data_directory.glob(\"*\")]\n",
     "        with open(metadata_path[0], 'w') as outFile:\n",
     "            json.dump(\n",
@@ -430,6 +430,7 @@
     "    return points\n",
     "\n",
     "def get_roi(frame):\n",
+    "    print(\"trying to get ROI...\")\n",
     "    roi = cv2.selectROI(\"Select ROI, Hit Esc to Exit\", frame)\n",
     "    \n",
     "    while True:\n",
@@ -442,8 +443,8 @@
     "\n",
     "def get_videos(data_directory):\n",
     "    # data_directory must be a pathlib Path object\n",
-    "    video_paths = sorted([path for path in data_directory.glob(\"*/*/*.avi\")])\n",
-    "    return video_paths\n",
+    "    video_paths = sorted([path for path in data_directory.glob(\"lgfl/rawdata/*/*OnePort*/*.mp4\")])\n",
+    "    return video_paths[0:2]\n",
     "\n",
     "def check_h5(video_path):\n",
     "    # check if the path has an h5 file already. If it does we probably don't mean\n",
@@ -643,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 41,
    "id": "ea90893d-40af-4d72-952c-0347c4eeb6d8",
    "metadata": {},
    "outputs": [
@@ -651,31 +652,34 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Are you sure? n\n"
+      "Are you sure? y\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bye bye!\n"
+      "Processing: 20240718_sub-0001_OnePortEtohExperimentProcessing: 20240718_sub-0002_OnePortEtohExperiment\n",
+      "\n",
+      "READING FRAME\n",
+      "READING FRAME\n",
+      "No ROI File Found, Generating ROINo ROI File Found, Generating ROI\n",
+      "\n"
      ]
     },
     {
-     "ename": "SystemExit",
+     "ename": "KeyboardInterrupt",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jmdelahanty/miniforge3/envs/sleap_analysis/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3558: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[41], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m check \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAre you sure?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m check \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m----> 4\u001b[0m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbye bye!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[39], line 306\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    303\u001b[0m     processes\u001b[38;5;241m.\u001b[39mappend(process)\n\u001b[1;32m    305\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m process \u001b[38;5;129;01min\u001b[39;00m processes:\n\u001b[0;32m--> 306\u001b[0m     \u001b[43mprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniforge3/envs/sleap_analysis/lib/python3.9/multiprocessing/process.py:149\u001b[0m, in \u001b[0;36mBaseProcess.join\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    147\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_parent_pid \u001b[38;5;241m==\u001b[39m os\u001b[38;5;241m.\u001b[39mgetpid(), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcan only join a child process\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    148\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_popen \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcan only join a started process\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m--> 149\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_popen\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    150\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m res \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    151\u001b[0m     _children\u001b[38;5;241m.\u001b[39mdiscard(\u001b[38;5;28mself\u001b[39m)\n",
+      "File \u001b[0;32m~/miniforge3/envs/sleap_analysis/lib/python3.9/multiprocessing/popen_fork.py:43\u001b[0m, in \u001b[0;36mPopen.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m     41\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     42\u001b[0m     \u001b[38;5;66;03m# This shouldn't block if wait() returned successfully.\u001b[39;00m\n\u001b[0;32m---> 43\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpoll\u001b[49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mWNOHANG\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.0\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01melse\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreturncode\n",
+      "File \u001b[0;32m~/miniforge3/envs/sleap_analysis/lib/python3.9/multiprocessing/popen_fork.py:27\u001b[0m, in \u001b[0;36mPopen.poll\u001b[0;34m(self, flag)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 27\u001b[0m         pid, sts \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwaitpid\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mflag\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m:\n\u001b[1;32m     29\u001b[0m         \u001b[38;5;66;03m# Child process not yet created. See #1731717\u001b[39;00m\n\u001b[1;32m     30\u001b[0m         \u001b[38;5;66;03m# e.errno == errno.ECHILD == 10\u001b[39;00m\n\u001b[1;32m     31\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -7347,6 +7351,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fed94dae-0f0b-457c-9f2f-40783cc0b651",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_frame_integrity(frame):\n",
+    "    if frame is None or frame.size == 0:\n",
+    "        return False\n",
+    "    if np.isnan(frame).any() or np.isinf(frame).any():\n",
+    "        return False\n",
+    "    return True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d28bc785-c3ce-414a-ab90-abbede90ec08",
    "metadata": {},
    "outputs": [],
@@ -7467,21 +7486,6 @@
     "                data_queue.task_done()\n",
     "            except queue.Empty:\n",
     "                continue"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fed94dae-0f0b-457c-9f2f-40783cc0b651",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def check_frame_integrity(frame):\n",
-    "    if frame is None or frame.size == 0:\n",
-    "        return False\n",
-    "    if np.isnan(frame).any() or np.isinf(frame).any():\n",
-    "        return False\n",
-    "    return True\n"
    ]
   }
  ],
